[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
name = "py_utils_optimazter"
version = "0.0.2"
authors = [
  { name="Adrian Hjertholm Voldseth", email="adrian@relu.no" },
]
description = "Utility functions for ml projects in python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"